--- a/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
+++ b/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
@@ -36,6 +36,11 @@
 </p>
 
 <p>  
+  <label><%= l(:inherit_description) %></label>
+  <%= check_box_tag 'settings[inherit_description]', 1, @settings[:inherit_description] %>
+</p>
+
+<p>  
   <label><%= l(:inherit_is_private) %></label>
   <%= check_box_tag 'settings[inherit_is_private]', 1, @settings[:inherit_is_private] %>
 </p>
