Inheriting custom fields

--- a/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
+++ b/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
@@ -45,6 +45,14 @@
   <%= check_box_tag 'settings[inherit_is_private]', 1, @settings[:inherit_is_private] %>
 </p>
 
+<% @settings[:inherit_custom_fields] ||= {} %>
+<% IssueCustomField.all.each do |field| %>
+  <p>  
+    <label><%= l(:inherit) + " " + field.name %></label>
+    <%= check_box_tag "settings[inherit_custom_fields][#{field.id}]", 1, @settings[:inherit_custom_fields][field.id.to_s] %>
+  </p>
+<% end %>
+
 <p>  
   <label><%= l(:inherit_parent_tracker) %></label>
   <%= check_box_tag 'settings[inherit_tracker_id]', 1, @settings[:inherit_tracker_id] %>
@@ -54,6 +62,8 @@
   <label id="settings_default_tracker_id_label"><%= l(:default_subtask_tracker) %></label>
   <%= select_tag "settings[default_tracker_id]", options_for_select(Tracker.all.map {|t| [t.name, t.id]},@settings[:default_tracker_id]) %>
 </p>
+
+
 
 <% content_for :header_tags do %>
   <%= javascript_include_tag :subtasks_inherited_fields, :plugin => 'redmine_subtasks_inherited_fields' %>
