access settings with strings

--- a/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
+++ b/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
@@ -2,70 +2,70 @@
 
 <p>  
   <label><%= l(:inherit_fixed_version) %></label>
-  <%= check_box_tag 'settings[inherit_fixed_version_id]', 1, @settings[:inherit_fixed_version_id] %>
+  <%= check_box_tag 'settings[inherit_fixed_version_id]', 1, @settings['inherit_fixed_version_id'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_assigned_to) %></label>
-  <%= check_box_tag 'settings[inherit_assigned_to_id]', 1, @settings[:inherit_assigned_to_id] %>
+  <%= check_box_tag 'settings[inherit_assigned_to_id]', 1, @settings['inherit_assigned_to_id'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_category) %></label>
-  <%= check_box_tag 'settings[inherit_category_id]', 1, @settings[:inherit_category_id] %>
+  <%= check_box_tag 'settings[inherit_category_id]', 1, @settings['inherit_category_id'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_priority) %></label>
-  <%= check_box_tag 'settings[inherit_priority_id]', 1, @settings[:inherit_priority_id] %>
+  <%= check_box_tag 'settings[inherit_priority_id]', 1, @settings['inherit_priority_id'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_status) %></label>
-  <%= check_box_tag 'settings[inherit_status_id]', 1, @settings[:inherit_status_id] %>
+  <%= check_box_tag 'settings[inherit_status_id]', 1, @settings['inherit_status_id'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_start_date) %></label>
-  <%= check_box_tag 'settings[inherit_start_date]', 1, @settings[:inherit_start_date] %>
+  <%= check_box_tag 'settings[inherit_start_date]', 1, @settings['inherit_start_date'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_due_date) %></label>
-  <%= check_box_tag 'settings[inherit_due_date]', 1, @settings[:inherit_due_date] %>
+  <%= check_box_tag 'settings[inherit_due_date]', 1, @settings['inherit_due_date'] %>
 </p>
 
 <p>  
   <label><%=  l(:inherit) + " " + l(:field_subject) %></label>
-  <%= check_box_tag 'settings[inherit_subject]', 1, @settings[:inherit_subject] %>
+  <%= check_box_tag 'settings[inherit_subject]', 1, @settings['inherit_subject'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_description) %></label>
-  <%= check_box_tag 'settings[inherit_description]', 1, @settings[:inherit_description] %>
+  <%= check_box_tag 'settings[inherit_description]', 1, @settings['inherit_description'] %>
 </p>
 
 <p>  
   <label><%= l(:inherit_is_private) %></label>
-  <%= check_box_tag 'settings[inherit_is_private]', 1, @settings[:inherit_is_private] %>
+  <%= check_box_tag 'settings[inherit_is_private]', 1, @settings['inherit_is_private'] %>
 </p>
 
-<% @settings[:inherit_custom_fields] ||= {} %>
+<% @settings['inherit_custom_fields'] ||= {} %>
 <% IssueCustomField.all.each do |field| %>
   <p>  
     <label><%= l(:inherit) + " " + field.name %></label>
-    <%= check_box_tag "settings[inherit_custom_fields][#{field.id}]", 1, @settings[:inherit_custom_fields][field.id.to_s] %>
+    <%= check_box_tag "settings[inherit_custom_fields][#{field.id}]", 1, @settings['inherit_custom_fields'][field.id.to_s] %>
   </p>
 <% end %>
 
 <p>  
   <label><%= l(:inherit_parent_tracker) %></label>
-  <%= check_box_tag 'settings[inherit_tracker_id]', 1, @settings[:inherit_tracker_id] %>
+  <%= check_box_tag 'settings[inherit_tracker_id]', 1, @settings['inherit_tracker_id'] %>
 </p>
 
 <p>  
   <label id="settings_default_tracker_id_label"><%= l(:default_subtask_tracker) %></label>
-  <%= select_tag "settings[default_tracker_id]", options_for_select(Tracker.all.map {|t| [t.name, t.id]},@settings[:default_tracker_id]) %>
+  <%= select_tag "settings[default_tracker_id]", options_for_select(Tracker.all.map {|t| [t.name, t.id]},@settings['default_tracker_id']) %>
 </p>
 
 
