inherit estimated hours

--- a/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
+++ b/app/views/subtasks_inherited_fields/_subtasks_inherited_fields.html.erb
@@ -50,6 +50,11 @@
   <%= check_box_tag 'settings[inherit_is_private]', 1, @settings['inherit_is_private'] %>
 </p>
 
+<p>  
+  <label><%= l(:inherit_estimated_hours) %></label>
+  <%= check_box_tag 'settings[inherit_estimated_hours]', 1, @settings['inherit_estimated_hours'] %>
+</p>
+
 <% @settings['inherit_custom_fields'] ||= {} %>
 <% IssueCustomField.all.each do |field| %>
   <p>  
